--- a/client/components/App.css
+++ b/client/components/App.css
@@ -15,7 +15,7 @@
 }
 
 .profile-info-container {
-  margin: 20px;
+  margin: auto;
 }
 
 .container {
@@ -24,4 +24,11 @@
 
 .volunteer-list {
   margin-top: 40px;
+}
+
+.profile-card {
+  display: flex;
+  margin-top: 20px;
+  flex-direction: column;
+  justify-content: space-between;
 }
