Implemented Guard.Added log out

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,16 @@
 {% block title %} HomePage {% endblock %}
 
 {% block body %}
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
+
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
     <div id="root" />
 {% endblock %}
