--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -3,5 +3,18 @@
 {% block title %}Register!{% endblock %}
 
 {% block body %}
-    {{ form(form) }}
+
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
+
+    {{ form_start(registerForm, {'action': path('Register'), 'method': 'POST'}) }}
+        {{ form_widget(registerForm) }}
+
+        <button class="btn btn-lg btn-primary" type="submit" id="user_Submit">Pateikti</button>
+    {{ form_end(registerForm) }}
+
 {% endblock %}
+
