--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,9 +10,12 @@
 
     {{ form_start(loginForm, {'action': path('app_login'), 'method': 'POST'}) }}
         {{ form_widget(loginForm) }}
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('login') }}"
-        >
+
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" name="_remember_me"> Remember me
+            </label>
+        </div>
         <button class="btn btn-lg btn-primary" type="submit" id="user_Submit">Prisijungti</button>
     {{ form_end(loginForm) }}
 
