--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -10,11 +10,10 @@
         </div>
     {% endfor %}
 
-    {{ form_start(registerForm, {'action': path('Register'), 'method': 'POST'}) }}
+    {{ form_start(registerForm, {'action': path('Register', {'type' : app.request.attributes.get('_route_params')['type']}), 'method': 'POST'}) }}
         {{ form_widget(registerForm) }}
 
         <button class="btn btn-lg btn-primary" type="submit" id="user_Submit">Pateikti</button>
     {{ form_end(registerForm) }}
 
 {% endblock %}
-
