--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -10,10 +10,22 @@
         </div>
     {% endfor %}
 
-    {{ form_start(registerForm, {'action': path('Register', {'type' : app.request.attributes.get('_route_params')['type']}), 'method': 'POST'}) }}
+    {{ form_start(registerForm, {'action': path('Register'), 'method': 'POST'}) }}
         {{ form_widget(registerForm) }}
 
+        <div id="checkboxGroup" class="checkbox mb-3">
+            <label for="role"> Pasirinkite role:<br>
+                <input type="checkbox" name="ROLE_VOLUNTEER"> Savanoris
+                <input type="checkbox" name="ROLE_ORGANISATION"> Organizacija
+            </label>
+        </div>
         <button class="btn btn-lg btn-primary" type="submit" id="user_Submit">Pateikti</button>
     {{ form_end(registerForm) }}
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="{{ asset('checkBox.js') }}" type="text/javascript"></script>
 {% endblock %}
