--- a/client/components/App.css
+++ b/client/components/App.css
@@ -32,3 +32,41 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.login-box {
+  border-style: solid;
+  border-width: 2px;
+  border-color: #f1f1f1;
+  background-color: #ffffff;
+
+}
+
+.label-text {
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 12px;
+
+}
+
+.form-rounded {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.fa-building {
+  font-size: 25px;
+}
+.organisation-box {
+  border-style: solid;
+}
+
+.organisation-box-text {
+  font-size: 10px;
+  text-align: right;
+}
+
+.volunteer-box {
+  border-style: solid;
+}
