--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register!{% endblock %}
+{% block title %}Registracija{% endblock %}
 
 {% block body %}
 
@@ -10,22 +10,56 @@
         </div>
     {% endfor %}
 
-    {{ form_start(registerForm, {'action': path('Register'), 'method': 'POST'}) }}
-        {{ form_widget(registerForm) }}
-        <div>
-            <label for="user_password_repeat" class="required">Pakartokite slaptažodį</label>
-            <input type="password" id="user_password" name="password_repeat"
-                   required="required" class="form-control"
-                   oninvalid="setCustomValidity('Pakartokite slaptažodį')" oninput="setCustomValidity('')" />
-        </div>
+    <div class="d-flex justify-content-md-center justify-content-sm-start mt-5">
+        <div class = "col-md-3 col-sm-12 login-box">
 
-        <div id="checkboxGroup" class="checkbox mb-3">
-            <label for="role"> Pasirinkite role:<br>
-                <input type="checkbox" name="ROLE_VOLUNTEER"> Savanoris
-                <input type="checkbox" name="ROLE_ORGANISATION"> Organizacija
-            </label>
+            <div class="d-flex justify-content-center">
+                <img src = "http://cherrytreemachines.co.uk/wp-content/uploads/2017/04/example-logo.jpg" class = "m-3" height="64" width="128">
+            </div>
+            {{ form_start(registerForm, {'action': path('Register'), 'method': 'POST'}) }}
+
+            <div class = "form-group">
+                <div class="role-checkbox justify-content-center">
+                    <div id="checkboxGroup" class="text-center">
+
+                        <div class = "form-group">
+                            <label for="role" class = "label-text"> Aš esu:</label>
+                        </div>
+
+                        <input type="checkbox" name="ROLE_VOLUNTEER" id="r1" />
+                        <label class="whatever" for="r1">
+                            <p class = "label-text text-center mt-1">Savanoris</p>
+                        </label>
+
+                        <input type="checkbox" name="ROLE_ORGANISATION" id="r2" />
+                        <label class="whatever" for="r2">
+                            <p class = "label-text text-center mt-1">Organizacija</p>
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div id = "form-data">
+                <div class = "form-group">
+                    {{ form_widget(registerForm) }}
+                </div>
+
+                <hr>
+
+                <div class = "form-group">
+                    <label for="user_password_repeat" class="label-text required">Pakartokite slaptažodį:</label>
+                    <input type="password" id="user_password" name="password_repeat"
+                           required="required" class="form-control form-rounded"
+                           oninvalid="setCustomValidity('Pakartokite slaptažodį:')" oninput="setCustomValidity('')" />
+                </div>
+
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('login') }}">
+
+                <button class="btn btn-primary btn-lg btn-block form-rounded mb-4 mt-4" type="submit" id="user_Submit">Pateikti</button>
+            </div>
         </div>
-        <button class="btn btn-lg btn-primary" type="submit" id="user_Submit">Pateikti</button>
+    </div>
+
+
     {{ form_end(registerForm) }}
 
 {% endblock %}
@@ -33,5 +67,10 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script>
+        $("#checkboxGroup").change(function(){
+            $("#form-data").slideToggle();
+        });
+    </script>
     <script src="{{ asset('checkBox.js') }}" type="text/javascript"></script>
 {% endblock %}
