--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -27,12 +27,12 @@
                         </div>
 
                         <input type="checkbox" name="ROLE_VOLUNTEER" id="r1" />
-                        <label class="whatever" for="r1">
+                        <label class="checkbox-label" for="r1">
                             <p class = "label-text text-center mt-1">Savanoris</p>
                         </label>
 
                         <input type="checkbox" name="ROLE_ORGANISATION" id="r2" />
-                        <label class="whatever" for="r2">
+                        <label class="checkbox-label" for="r2">
                             <p class = "label-text text-center mt-1">Organizacija</p>
                         </label>
                     </div>
