--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -16,11 +16,11 @@
             <div class="d-flex justify-content-center">
                 <img src = "http://cherrytreemachines.co.uk/wp-content/uploads/2017/04/example-logo.jpg" class = "m-3" height="64" width="128">
             </div>
-            {{ form_start(registerForm, {'action': path('Register'), 'method': 'POST'}) }}
+            {{ form_start(registerForm, {'action': path('Register'), 'attr': {'onsubmit':'return checkCheckBoxes(this);'} ,'method': 'POST'}) }}
 
             <div class = "form-group">
                 <div class="role-checkbox justify-content-center">
-                    <div id="checkboxGroup" class="text-center">
+                    <div id="checkboxGroup" class="text-center" >
 
                         <div class = "form-group">
                             <label for="role" class = "label-text"> Aš esu:</label>
@@ -58,10 +58,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script>
-        $("#checkboxGroup").change(function(){
-            $("#form-data").slideToggle();
-        });
-    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    
     <script src="{{ asset('checkBox.js') }}" type="text/javascript"></script>
 {% endblock %}
