added remember me, style fixes

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,25 +9,24 @@
     {% endif %}
 
     <div class="d-flex justify-content-md-center justify-content-sm-start mt-5">
-        <div class = "col-md-4 col-sm-12 login-box">
+        <div class = "col-md-6 col-sm-12 login-box">
 
             <div class="d-flex justify-content-center">
                 <img src = "http://cherrytreemachines.co.uk/wp-content/uploads/2017/04/example-logo.jpg" class = "m-3" height="64" width="128">
             </div>
             {{ form_start(loginForm, {'action': path('app_login'), 'method': 'POST'}) }}
 
-
-                {{ form_widget(loginForm) }}
-
-
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('login') }}">
+                <div class = "form-group">
+                    {{ form_widget(loginForm) }}
+                </div>
 
                 <button class="btn btn-primary btn-lg btn-block form-rounded mb-2 mt-4" type="submit" id="user_Submit">Prisijungti</button>
             {{ form_end(loginForm) }}
 
-            <div class = "mb-3">
-                <div class = "justify-content-around">
-                    <a href = "#">Pamiršai slaptažodį?</a>
+            <div class = "mb-3 mt-3">
+                <div class="form-check">
+                    <input class="form-check-input position-static" type="checkbox" name="_remember_me">
+                    <label class = "label-text">Prisiminti mane</label>
                     <a href = "/register" style = "float: right">Dar neturi paskyros?</a>
                 </div>
             </div>
