--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,7 +28,7 @@
                     <input class="form-check-input position-static" type="checkbox" name="_remember_me">
                     <label class = "label-text">Prisiminti mane</label>
                     {{ form_end(loginForm) }}
-                    <a href = "/register" style = "float: right">Dar neturi paskyros?</a>
+                    <a href = "{{ path('Register') }}" style = "float: right">Dar neturi paskyros?</a>
                 </div>
             </div>
 
