Navbar changes, linking fixes, styling

--- a/client/components/App.css
+++ b/client/components/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans|700');
+
 body {
   background-color: #f8f8f8;
 }
@@ -22,8 +24,15 @@ body {
 }
 
 .Card-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 45%;
-  border-color: #46b8da;
+  border: 1px solid #46b8da;
+}
+
+.Card-button:hover {
+  text-decoration: none;
 }
 
 .Card-profile-name {
@@ -47,7 +56,7 @@ body {
 }
 
 .container {
-  margin: auto;
+  width: 100%;
 }
 
 .volunteer-list {
@@ -144,4 +153,36 @@ body {
 }
 .react-bootstrap-daterangepicker-container {
   display: block !important;
+}
+
+.Navbar {
+  background-color: #5bc0de;
+  margin-bottom: 10px;
+}
+
+.Navbar-brand {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 900;
+  font-size: 1.5rem;
+  color: #fff;
+  letter-spacing: 3px;
+}
+
+.Navbar-brand:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+.Navbar-link {
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0 5px 0 5px;
+  color: #fff;
+}
+
+.Navbar-link:hover {
+  text-decoration: none;
+  color: #e0e1e2;
 }
