Revert "Merge pull request #45 from nfqakademija/master"
This reverts commit bae90346aec91bea7d60df21b72b14524b160674, reversing
changes made to d547fef2e02dbb85577eff459dc5cdf09c77ad16.

--- a/client/components/App.css
+++ b/client/components/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans|700');
-
 body {
   background-color: #f8f8f8;
 }
@@ -24,15 +22,8 @@ body {
 }
 
 .Card-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 45%;
-  border: 1px solid #46b8da;
-}
-
-.Card-button:hover {
-  text-decoration: none;
+  border-color: #46b8da;
 }
 
 .Card-profile-name {
@@ -56,7 +47,7 @@ body {
 }
 
 .container {
-  width: 100%;
+  margin: auto;
 }
 
 .volunteer-list {
@@ -153,36 +144,4 @@ body {
 }
 .react-bootstrap-daterangepicker-container {
   display: block !important;
-}
-
-.Navbar {
-  background-color: #5bc0de;
-  margin-bottom: 10px;
-}
-
-.Navbar-brand {
-  text-transform: uppercase;
-  text-decoration: none;
-  font-family: 'Noto Sans', sans-serif;
-  font-weight: 900;
-  font-size: 1.5rem;
-  color: #fff;
-  letter-spacing: 3px;
-}
-
-.Navbar-brand:hover {
-  text-decoration: none;
-  color: #fff;
-}
-
-.Navbar-link {
-  font-size: 1rem;
-  font-weight: 400;
-  padding: 0 5px 0 5px;
-  color: #fff;
-}
-
-.Navbar-link:hover {
-  text-decoration: none;
-  color: #e0e1e2;
 }
