--- a/client/components/App.css
+++ b/client/components/App.css
@@ -26,12 +26,18 @@ body {
 .Card-button {
   display: flex;
   justify-content: center;
+  margin: 0;
   align-items: center;
-  width: 45%;
+  width: 100%;
+  height: 50px;
   border: 1px solid #46b8da;
+  background-color: #46b8da;
 }
 
-.Card-button:hover {
+.Cardd-button {
+}
+
+.Cardd-button:hover {
   text-decoration: none;
 }
 
