Landing page updates, code style fixes, login and register form fixes.

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,8 +7,7 @@
 
 
     <div class="d-flex justify-content-md-center justify-content-sm-start mt-5">
-        <div class = "col-md-6 col-sm-12 login-box">
-
+        <div class = "col-md-3 col-sm-12 login-box">
             <div class="d-flex justify-content-center">
                 <img src = "http://cherrytreemachines.co.uk/wp-content/uploads/2017/04/example-logo.jpg" class = "m-3" height="64" width="128">
             </div>
@@ -33,6 +32,10 @@
             </div>
 
         </div>
+    </div>
+
+    <div class = "back-button text-center m-1">
+        <a href="#"><i class="fas fa-long-arrow-alt-left"></i> Grįžk atgal</a>
     </div>
 
 
