--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -7,8 +7,7 @@
 
 
     <div class="d-flex justify-content-md-center justify-content-sm-start mt-5">
-        <div class = "col-md-6 col-sm-12 login-box">
-
+        <div class = "col-md-3 col-sm-12 login-box">
             <div class="d-flex justify-content-center">
                 <img src = "http://cherrytreemachines.co.uk/wp-content/uploads/2017/04/example-logo.jpg" class = "m-3" height="64" width="128">
             </div>
@@ -46,7 +45,9 @@
             </div>
         </div>
     </div>
-
+    <div class = "back-button text-center m-1">
+        <a href="#"><i class="fas fa-long-arrow-alt-left"></i> Grįžk atgal</a>
+    </div>
 
 
     {{ form_end(registerForm) }}
@@ -55,8 +56,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    
     <script src="{{ asset('checkBox.js') }}" type="text/javascript"></script>
 {% endblock %}
