render landing page

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -71,7 +71,10 @@
             </div>
         </div>
     </div>
-        
+    
+    <div id="volunteer-list" style = "display: none;"></div>
+    <div id="event-list" style = "display: none;"></div>
+
     <div class="row">
         <div class="col-md-12 text-center">
             <h2 class="heading-text">Registracija</h2>
@@ -114,8 +117,6 @@
        
         </div>
     </div>
-    
-    <div id="volunteer-list"></div>
     
     <div class="footer">
         <div class="row">
