--- a/client/components/Event/EventCard.css
+++ b/client/components/Event/EventCard.css
@@ -19,6 +19,8 @@
   background-color: #fff;
   border-radius: 0.3em;
   box-shadow: 7px 8px 29px -6px rgba(0, 0, 0, 0.75);
+  margin: auto;
+  margin-bottom: 20px;
 }
 
 .event-info-container {
