--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -48,7 +48,7 @@
             <div class="card border mb-3">
                 <div class="card-body text-center">
                     <img src="user.png" height="100px">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Prisijunkite prie mūsų bendruomenės</p>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
             <div class="card border mb-3">
                 <div class="card-body text-center">
                     <img src="worker.png" height="100px">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Ieškokite savanorių arba renginių</p>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
             <div class="card border mb-3">
                 <div class="card-body text-center">
                     <img src="charity.png" height="100px">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Susirask bendraminčių ir pasaulį keiskite kartu!</p>
                 </div>
             </div>
         </div>
